# pytabify

./: .importlinter  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
assets/javascripts/: mermaid.js
atests/: test_api_publica_steps.py  test_robot_steps.py
atests/features/: api_publica.feature  robot.feature
docs/: index.md
docs/assets/stylesheets/: extra.css
docs/examples/: python.md  robot-framework.md
docs/getting-started/: installation.md  quickstart.md
docs/internal/: architecture.md  extending-readers-writers.md
docs/reference/: creator.md  data-table.md  file-formats.md  saver.md
docs/troubleshooting/: common-errors.md
examples/python/: index.html
examples/robot-framework/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
internal/architecture/: index.html
internal/extending-readers-writers/: index.html
reference/creator/: index.html
reference/data-table/: index.html
reference/file-formats/: index.html
reference/saver/: index.html
search/: search_index.json
src/pytabify/: __init__.py  bootstrap.py  creator.py  saver.py
src/pytabify/adapters/: __init__.py
src/pytabify/adapters/files/: __init__.py  errors.py  formats.py  resolvers.py
src/pytabify/adapters/files/readers/: __init__.py  csv_file_reading_adapter.py  json_file_reading_adapter.py  xlsx_file_reading_adapter.py
src/pytabify/adapters/files/writers/: __init__.py  csv_file_writing_adapter.py  json_file_writing_adapter.py  xlsx_file_writing_adapter.py
src/pytabify/application/ports/: __init__.py  reader_resolver.py  table_reader.py  table_writer.py  writer_resolver.py
src/pytabify/application/use_cases/: __init__.py  create_data_table_from_file.py  create_data_table_from_records.py  save_data_table.py
src/pytabify/domain/: __init__.py  data_table.py  dt_field.py  dt_header.py  dt_row.py  errors.py  validation.py
src/pytabify/io/: file_formats.py
src/pytabify/io/interfaces/: read.py  save.py
src/pytabify/io/strategies/: reading.py  saving.py
src/pytabify/robot/: __init__.py  library.py  robot_data_row.py  robot_data_table.py
src/pytabify/utils/: __init__.py  errors.py  validation.py
troubleshooting/common-errors/: index.html
utests/: conftest.py  test_compatibility.py  test_core.py  test_io.py  test_public_api.py  test_resolvers.py  test_robot.py  test_use_cases.py  test_validation.py
