[project]
name = "pytabify"
version = "2.0.0"
description = "pytabify es una libreria ligera para cargar, validar y persistir datos tabulares desde CSV, JSON y Excel, con una API Python simple y un wrapper oficial para Robot Framework."
authors = [
    { name = "Angel Gerardo Molina Valdez", email = "angelgerardomolinavaldez@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

dependencies = ["openpyxl (>=3.1.5,<4.0.0)"]

[tool.poetry.group.dev.dependencies]
robotframework = "^7.2.2"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
repository = "https://github.com/angel-valdezzz/pytabify"
